--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,7 +2,7 @@
 <html lang="pl">
 
 <head>
-    <title>{% block title %}Welcome to the SpaceBar{% endblock %}</title>
+    <title>{% block title %}Welcome to the WeatherBar{% endblock %}</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
