--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,7 +2,7 @@
 <html lang="pl">
 
 <head>
-    <title>{% block title %}Welcome to the WeatherBar{% endblock %}</title>
+    <title>{% block title %}What's the weather like today in...{% endblock %}</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-     <main>
+     <main class="main">
         {% block body %}{% endblock %}
     </main>
 
